--- a/app/src/main/res/layout/activity_game_setting.xml
+++ b/app/src/main/res/layout/activity_game_setting.xml
@@ -248,6 +248,23 @@
             android:text="@string/score_board"
             android:textSize="18sp"
             android:textStyle="bold" />
+        <Button
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:includeFontPadding="false"
+            android:text="Get Location"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:onClick="showLocation"
+            android:backgroundTint="@color/teal_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.884"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.084" />
 
     </LinearLayout>
 
