--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -26,7 +26,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@string/background_image"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_scoreboard_1600x900"
+        android:src="@drawable/scoreboard"
         tools:ignore="MissingConstraints" />
 
     <LinearLayout
@@ -45,9 +45,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
+            android:layout_marginTop="130dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="130dp"
             app:checkedButton="@id/easy"
             app:singleSelection="true">
 
@@ -61,7 +61,8 @@
                 android:backgroundTint="@color/white"
                 android:fontFamily="casual"
                 android:text="@string/easy"
-                android:textStyle="bold"/>
+                android:textColor="@color/purple_500"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/medium"
@@ -73,6 +74,7 @@
                 android:backgroundTint="@color/white"
                 android:fontFamily="casual"
                 android:text="@string/medium"
+                android:textColor="@color/purple_500"
                 android:textStyle="bold" />
 
             <Button
@@ -85,6 +87,7 @@
                 android:backgroundTint="@color/white"
                 android:fontFamily="casual"
                 android:text="@string/hard"
+                android:textColor="@color/purple_500"
                 android:textStyle="bold" />
 
         </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -97,6 +100,7 @@
             android:fontFamily="casual"
             android:text="@string/your_best_score"
             android:textSize="18sp"
+            android:textColor="@color/purple_500"
             android:textStyle="bold" />
 
         <TextView
@@ -107,14 +111,15 @@
             android:fontFamily="casual"
             android:text="@string/you_have_played"
             android:textSize="18sp"
+            android:textColor="@color/purple_500"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:layout_height="0dp"
             android:layout_weight="90"
             android:padding="5dp"
             android:scrollbars="vertical" />
